#29: Update samples with new JavaFX plugin